Enable voting using XHR instead of refreshing page.

--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -33,6 +33,9 @@
     {# Uni-form #}
     <script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript" charset="utf-8"></script>
 
+    {# site-wide #}
+    <script src="{{ STATIC_URL }}voting/voting.js" type="text/javascript" charset="utf-8"></script>
+
     {% block headscripts %}{% endblock %}
 
     <script type="text/javascript" charset="utf-8">
