--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -61,7 +61,7 @@
 <body class="container_12 {% block body_class %}{% endblock %}">
 
 <div style="text-align: center; color: red; font-weight: bold">
-    This is a testing site.  Please visit <a href="http://sensiblewashington.org/">SensibleWashington.org</a>
+    This is a beta site for invited users only.  Please visit <a href="http://sensiblewashington.org/">SensibleWashington.org</a>
     for our official site.  Thanks!
 </div>
 
