--- a/sw/templates/account/base.html
+++ b/sw/templates/account/base.html
@@ -1,3 +1,8 @@
 {% extends "site_base.html" %}
 
+{% load breadcrumbs %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Accounts' %}
+{% endblock %}
