--- a/sw/templates/account/login.html
+++ b/sw/templates/account/login.html
@@ -1,14 +1,23 @@
-{% extends "site_base.html" %}
+{% extends "account/base.html" %}
 
+{% load feature_tag %}
 {% load i18n %}
 {% load uni_form_tags %}
 {% load account_tags %}
+{% load breadcrumbs %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb_url 'Sign In' account_login %}
+{% endblock %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block body %}
-    
-    <h1>{% trans "Sign In" %}</h1>
+
+    {% feature breadcrumbs %}{% disabled %}
+    <h1>Sign In</h1>
+    {% endfeature %}
 
     {% if not user.is_authenticated %}
         {% url account_signup as signup_url %}
@@ -30,11 +39,11 @@
             </div>
         </fieldset>
     </form>
-    
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
+
 
 {% endblock %}
 
