--- a/sw/templates/cms/base.html
+++ b/sw/templates/cms/base.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 {% load cms_tags %}
+{% load menu_tags %}
 
 {% block page_title %}{% page_attribute "page_title" %}{% endblock %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% show_breadcrumb %}
+{% endblock %}
 
 {% block content_wrapper %}
     <div id="content" class="alpha omega grid_12">
         {% include "site_messages.html" %}
         <div class="section">
-            <h1>{% page_attribute "page_title" %}</h1>
-
             {% placeholder "content" %}
         </div>
     </div>
