--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -283,11 +283,6 @@ div#sidebar div.more {
 
 /* @end */
 
-.section.intro h1 {
-	margin-top: .5em;
-    margin-bottom: 0px;
-}
-
 /* @group #site-messages */
 
 ul#site-messages {
@@ -305,22 +300,6 @@ ul#site-messages li {
 }
 
 /* @end */
-
-.section.intro {
-	margin-bottom: 2em;
-}
-
-.section.news .section h1 {
-    background-color: #009966;
-    color: white;
-    font-weight: normal;
-    text-align: center;
-    margin-bottom: .3em;
-}
-
-.section.news .date {
-    font-weight: bold;
-}
 
 /* @group join-campaign-form */
 
@@ -525,6 +504,43 @@ ul.thumbnails .caption {
 
 /* @end */
 
+.section.intro h1 {
+	margin-top: .5em;
+    margin-bottom: 0px;
+}
 
+.section.intro {
+	margin-bottom: 2em;
+}
+
+.section.news .section h1 {
+    background-color: #009966;
+    color: white;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: .3em;
+}
+
+.section.news .date {
+    font-weight: bold;
+}
+
+
+
+/* @end */
+
+/* @group under construction */
+
+div#underconstruction {
+    margin-top: 6em;
+    margin-bottom: 5em;
+    background: lightyellow;
+    padding: 3em;
+    border: 4px solid #009966;
+}
+
+#underconstruction p:last-child {
+    margin-bottom: 0;
+}
 
 /* @end */
