--- a/sw/templates/cms/base.html
+++ b/sw/templates/cms/base.html
@@ -12,6 +12,7 @@
 
 {% block content_wrapper %}
     {% feature cms_content %}
+        {% include "sw/cms_page_preamble.html" %}
         <div id="content" class="alpha omega grid_12">
             {% include "site_messages.html" %}
             <div class="section">
