--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -289,11 +289,12 @@ ul#site-messages {
 
 ul#site-messages li {
     display: block;
-    margin-left: 0;
-    margin-top: 1em;
+    background: lightyellow;
+    margin: 1em;
     padding: 1em;
-    border: 1px solid black;
-    background-color: #00F2A2;
+    border-width: 1px 1px 3px 1px;
+    border-color: #009966;
+    border-style: solid;
 }
 
 /* @end */
