Major refactoring of templates and styles.
- Clean up base templates.
- Use sass to create CSS files now.
- Define a new style for volunteer HQ pages.
- Update the site sections to distinguish between visitors and volunteers.

--- a/sw/templates/cms/base.html
+++ b/sw/templates/cms/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_12.html" %}
 {% load cms_tags %}
 {% load feature_tag %}
 {% load menu_tags %}
@@ -10,7 +10,7 @@
     {% show_breadcrumb %}
 {% endblock %}
 
-{% block content_wrapper %}
+{% block page_content %}
     {% feature cms_content %}
         {% include "sw/cms_page_preamble.html" %}
         <div id="content" class="alpha omega grid_12">
@@ -26,7 +26,4 @@
     {% disabled %}
         {% include "sw/underconstruction.html" %}
     {% endfeature %}
-{% endblock %}
-
-{% block sidebar %}
 {% endblock %}
