--- a/sw/templates/site_base_sidebars.html
+++ b/sw/templates/site_base_sidebars.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_8_4.html" %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
