--- a/sw/templates/socialaccount/base.html
+++ b/sw/templates/socialaccount/base.html
@@ -1,4 +1,4 @@
-{% extends "base_fullwidth.html" %}
+{% extends "base_12.html" %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
