--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -1,555 +1,482 @@
-/* @override
-	http://localhost:8000/media/css/base.css
-	http://swdev.local:8000/media/css/base.css
-	https://snswa.org/media/css/base.css
-*/
-
+/* http://colorschemedesigner.com/#3741Tw0sRw0w0 */
+/* end colors */
 a {
-    color: #009966;
-}
+  color: #0b4f96; }
+
+.hq a {
+  color: #8a5300; }
 
 a:hover {
-    color: black;
-}
+  color: black; }
+
+.hq a:hover {
+  color: #0b4f96; }
 
 body {
-    position: relative;
-    font-family: "Lucida Grande", "Verdana", "Arial", sans-serif;
-}
+  position: relative;
+  font-family: "Lucida Grande", "Verdana", "Arial", sans-serif; }
 
 /* @group global */
-
 th {
-    padding-left: .5em;
-    padding-right: .5em;
-    padding-top: .5em;
-}
+  padding-left: .5em;
+  padding-right: .5em;
+  padding-top: .5em; }
 
 td {
-    padding: .5em;
-    border: 1px solid black;
-}
+  padding: .5em;
+  border: 1px solid black; }
 
 /* @end */
-
 /* @group auth */
-
 #auth-info {
-	background-color: #009966;
-    text-align: right;
-    font-size: 14px;
-    border-bottom: 2px solid #009966;
-    position: relative;
-    height: 22px;
-    color: white;
-}
+  background-color: #0e66c1;
+  text-align: right;
+  font-size: 14px;
+  border-bottom: 2px solid #57a3f3;
+  position: relative;
+  height: 22px;
+  color: white; }
 
 #auth-info span {
-    padding-left: 1em;
-}
+  padding-left: 1em; }
 
 #auth-info a {
-    font-weight: bold;
-    padding: 4px;
-    color: white;
-}
+  font-weight: bold;
+  padding: 4px;
+  color: white;
+  text-decoration: none; }
 
 #auth-info a:hover {
-    color: yellow;
-    background-color: #009966;
-}
+  text-decoration: underline; }
 
 /* @endgroup */
-
 /* @group header */
+.header {
+  margin-left: 0px;
+  position: relative;
+  width: 940px;
+  margin-top: 1em; }
+
+.hq .header {
+  margin-top: .5em; }
 
 .header {
-    margin-left: 0px;
-    position: relative;
-}
+  background-image: url("../images/logos/logo-246x140.gif");
+  background-repeat: no-repeat;
+  background-size: 246px 140px;
+  background-position: 5px;
+  height: 140px;
+  width: 940px;
+  padding: 0; }
 
-.header.large {
-    width: 940px;
-}
+.hq .header {
+  background-image: url("../images/logos/logo-123x70.gif");
+  background-size: 123px 70px;
+  height: 70px; }
 
-.header.large {
-    background-image: url("../images/logos/logo-246x140.gif");
-    background-repeat: no-repeat;
-    background-size: 246px 140px;
-    background-position: 5px;
-    height: 140px;
-    width: 940px;
-    padding: 0;
-}
+.header h1 a {
+  display: block;
+  height: 140px;
+  text-indent: -9999px; }
 
-.header.large h1 a {
-	display: block;
-	height: 140px;
-	text-indent: -9999px;
-}
+.hq .header h1 a {
+  height: 70px; }
 
-.header.large h2 {
-	display: table-cell;
-    width: 940px;
-    text-align: center;
-    position: absolute;
-    height: 105px;
-    top: 35px;
-	margin: 0;
-}
+.header h2 {
+  display: table-cell;
+  width: 940px;
+  text-align: center;
+  position: absolute;
+  height: 105px;
+  top: 35px;
+  margin: 0; }
 
-.header.large #site-search {
-	position: absolute;
-	top: 1.5em;
-	right: 1.5em;
-}
+.hq .header h2 {
+  top: 15px;
+  height: 40px; }
+
+#site-search {
+  position: absolute;
+  top: 1.5em;
+  right: 1.5em; }
+
+.hq #site-search {
+  top: 20px; }
 
 #site-search input {
-    width: 200px;
-    height: 1.5em;
-}
-
-.header.large #follow-campaign {
-    position: absolute;
-    top: 55px;
-    right: 20px;
-}
+  width: 200px;
+  height: 1.5em; }
 
 #follow-campaign {
-    width: 200px;
-    text-align: center;
-    font-weight: bold;
-}
+  position: absolute;
+  top: 55px;
+  right: 20px; }
+
+.hq #follow-campaign {
+  display: none; }
+
+#follow-campaign {
+  width: 200px;
+  text-align: center;
+  font-weight: bold; }
 
 #follow-campaign li {
-    display: inline;
-	margin-left: 0;
-}
-
-
+  display: inline;
+  margin-left: 0; }
 
 /* @end */
-
 /* @group #site-sections */
-
 div#site-sections {
-    display: table;
-    top: 24px;
-    left: 5px;
-    height: 50px;
-    max-height: 50px;
-    margin-right: 0px;
-    width: 940px;
-    border-top: 2px solid #009966;
-    border-bottom: 2px solid #009966;
-}
+  display: table;
+  top: 24px;
+  left: 5px;
+  height: 50px;
+  max-height: 50px;
+  margin-right: 0px;
+  width: 940px;
+  border-bottom: 2px solid #009966;
+  font-weight: bold; }
 
-div#site-sections ul {
-	list-style-type: none;
-    display: table;
-    margin-top: 10px;
-    height: 40px;
-}
+.hq div#site-sections {
+  border-color: #57a3f3;
+  height: 25px;
+  max-height: 25px; }
+
+#site-sections ul {
+  list-style-type: none;
+  display: table;
+  margin-top: 10px;
+  height: 40px; }
+
+.hq #site-sections ul {
+  height: 20px;
+  margin-top: 2px; }
 
 div#site-sections li {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-	color: #009966;
-}
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  color: #006b47; }
+
+.hq div#site-sections li {
+  color: #08386b; }
 
 div#site-sections a {
-	display: block;
-	float: left;
-	width: 150px;
-	text-decoration: none;
-	color: inherit;
-}
+  display: block;
+  float: left;
+  width: 150px;
+  text-decoration: none;
+  color: inherit; }
 
 div#site-sections .section-title {
-    display: block;
-}
+  display: block; }
 
 div#site-sections .section-about {
-    display: block;
-    font-size: smaller;
-}
+  display: block;
+  font-size: smaller; }
 
 div#site-sections .active .section-title {
-    font-weight: bold;
-}
+  font-weight: bold; }
 
 div#site-sections .featured {
-    color: black;
-}
+  color: black; }
 
 div#site-sections .featured .section-title {
-    text-decoration: underline;
-    font-weight: bold;
-}
+  text-decoration: underline;
+  font-weight: bold; }
 
 div#site-sections li:hover {
-    color: white;
-    background: #009966;
-}
+  color: white;
+  background: #009966; }
+
+.hq div#site-sections li:hover {
+  background: #0b4f96; }
 
 /* @end */
-
 /* @group breadcrumbs */
-
 div#breadcrumbs {
-    border-bottom: #009966 solid 2px;
-    width: 940px;
-}
+  border-bottom: #009966 solid 2px;
+  width: 940px; }
+
+.hq div#breadcrumbs {
+  border-color: #0b4f96; }
 
 #breadcrumbs ul {
-    display: inline;
-    padding: 0;
-    margin: 0 0 0 1em;
-}
+  display: inline;
+  padding: 0;
+  margin: 0 0 0 1em; }
 
 #breadcrumbs ul li {
-    display: inline;
-    padding: 0;
-    margin-left: 0;
-}
+  display: inline;
+  padding: 0;
+  margin-left: 0; }
 
 #breadcrumbs li + li:before {
-    content: " » ";
-}
+  content: " » "; }
 
 #breadcrumbs li:last-child {
-    font-weight: bold;
-    font-size: larger;
-}
+  font-weight: bold;
+  font-size: larger; }
 
 #breadcrumbs a {
-    text-decoration: none;
-}
-
+  text-decoration: none; }
 
 /* @end */
-
 /* @group #content */
-
 div#content {
-    margin-top: .75em;
-}
+  margin-top: .75em; }
+
+div#content.grid_8 {
+  padding-right: 1em; }
 
 /* @end */
-
 /* @group #sidebar */
-
 div#sidebar {
-    background-repeat: repeat-y;
-    background-position: 43px;
-    background-image: url("../images/bg/verticalbar.png");
-    font-size: smaller;
-}
+  font-size: smaller; }
 
 div#sidebar .section {
-    margin-top: 1.5em;
-    margin-bottom: 2em;
-    position: relative;
-}
+  margin-top: 1.5em;
+  margin-bottom: 2em;
+  padding: 1em;
+  position: relative; }
+
+.hq #sidebar .section {
+  background: #ffebcc;
+  border-left: 2px solid #b86e00; }
 
 div#sidebar .sidebar-icon {
-    position: absolute;
-    left: -50px;
-}
+  position: absolute;
+  left: -50px; }
 
 div#sidebar h1 {
-    font-size: 14pt;
-    margin-bottom: .5em;
-    border-bottom: 2px solid #009966;
-}
+  font-size: 14pt;
+  margin-bottom: .5em;
+  border-bottom: 2px solid #009966; }
+
+.hq div#sidebar h1 {
+  border-color: #0b4f96; }
 
 div#sidebar ul {
-    margin-bottom: .5em;
-}
+  margin-bottom: .5em; }
 
 div#sidebar form {
-	display: inline;
-	margin: 0;
-	padding: 0;
-}
+  display: inline;
+  margin: 0;
+  padding: 0; }
 
 div#sidebar div.more {
-    text-align: right;
-}
+  text-align: right; }
 
 /* @end */
-
 /* @group #site-messages */
-
 ul#site-messages {
-	list-style: none outside none;
-	margin-bottom: 0;
-}
+  list-style: none outside none;
+  margin-bottom: 0; }
 
 ul#site-messages li {
-    display: block;
-    background: lightyellow;
-    margin: 1em;
-    padding: 1em;
-    border-width: 1px 1px 3px 1px;
-    border-color: #009966;
-    border-style: solid;
-}
+  display: block;
+  background: #fff5e6;
+  margin: 1em;
+  padding: 1em;
+  border-width: 1px 1px 3px 1px;
+  border-color: #e68a00;
+  border-style: solid; }
 
 /* @end */
-
 /* @group join-campaign-form */
-
 form#join-campaign-form input {
-    display: block;
-    width: 215px;
-    height: 1.5em;
-    margin-bottom: .5em;
-}
+  display: block;
+  width: 215px;
+  height: 1.5em;
+  margin-bottom: .5em; }
 
 form#join-campaign-form input[type="submit"] {
-    width: 70px;
-    height: 2em;
-    margin-left: 150px;
-}
+  width: 70px;
+  height: 2em;
+  margin-left: 150px; }
 
 /* @end */
-
 /* @group footer */
-
 div.footer {
-	width: 940px;
-	margin-top: 2em;
-    border-top: 2px solid #009966;
-}
+  width: 940px;
+  margin-top: 2em;
+  border-top: 2px solid #009966; }
 
 div.footer span {
-    padding-right: 1em;
-}
+  padding-right: 1em; }
 
 /* @end */
-
 /* @group apps */
-
 .object-command {
-    color: silver;
-    font-size: smaller;
-}
+  color: silver;
+  font-size: smaller; }
 
 /* @group activity stream */
-
 ul.stream li.event {
-    padding-bottom: 1em;
-}
+  padding-bottom: 1em; }
 
 ul.stream li.event span.timestamp {
-    display: block;
-    font-size: smaller;
-    color: silver;
-}
+  display: block;
+  font-size: smaller;
+  color: silver; }
 
 ul.stream li.event div.description {
-    color: gray;
-    margin-left: 1em;
-    padding-left: 1em;
-    padding-top: .25em;
-    padding-bottom: .25em;
-    border-left: 2px solid silver;
-}
+  color: gray;
+  margin-left: 1em;
+  padding-left: 1em;
+  padding-top: .25em;
+  padding-bottom: .25em;
+  border-left: 2px solid silver; }
 
 /* @end */
-
 /* @group attachments */
-
 ul.attachments li a.attachment {
-   	margin-right: 1.5em;
-}
+  margin-right: 1.5em; }
 
 form.add-attachment p {
-	margin-top: 1em;
-    margin-bottom: 0;
-}
+  margin-top: 1em;
+  margin-bottom: 0; }
 
 /* @end */
-
 /* @group comments */
-
 div.comment {
-    margin-bottom: 1.5em;
-}
+  margin-bottom: 1.5em; }
 
-div.comment .comment-body {
-    color: gray;
-    margin-left: 1em;
-    padding-left: 1em;
-    padding-top: .25em;
-    padding-bottom: .25em;
-    border-left: 2px solid silver;
-}
+.comment .comment-body {
+  color: gray;
+  margin-left: 1em;
+  padding-left: 1em;
+  padding-top: .25em;
+  padding-bottom: .25em;
+  border-left: 2px solid silver; }
+
+.hq .comment .comment-body {
+  /* */ }
 
 /* @end */
-
 /* @group teams */
+.hq #team-header {
+  position: static;
+  display: table;
+  top: 24px;
+  left: 5px;
+  height: 50px;
+  max-height: 50px;
+  margin-right: 0px;
+  width: 940px;
+  border-bottom: 2px solid #57a3f3;
+  background-color: #0b4f96; }
 
-#team-header {
-	position: static;
-    display: table;
-    top: 24px;
-    left: 5px;
-    height: 50px;
-    max-height: 50px;
-    margin-right: 0px;
-    width: 940px;
-    border-top: 2px solid #009966;
-    border-bottom: 2px solid #009966;
-    background-color: #0d8751;
-}
+.hq #team-header a {
+  color: white;
+  text-decoration: none; }
 
-#team-header a {
-    color: white;
-    text-decoration: none;
-}
+.hq #team-header a:hover {
+  text-decoration: underline; }
 
-#team-header a:hover {
-    text-decoration: underline;
-}
-
-#team-header h1 {
-	text-align: center;
-	color: white;
-	margin-top: .1em;
-	margin-bottom: .1em;
-}
-
-#team-header #team-membership {
-}
+.hq #team-header h1 {
+  text-align: center;
+  color: white;
+  margin-top: .1em;
+  margin-bottom: .1em; }
 
 /* @end */
-
 /* @group voting */
-
 .votes form {
-    display: inline;
-}
+  display: inline; }
 
 .votes .score {
-    font-weight: bold;
-}
+  font-weight: bold; }
 
 .votes {
-    margin-right: 1em;
-}
+  margin-right: 1em; }
 
 /* @end */
-
-
-
 /* @end */
-
 /* @group prototype */
-
 /* @group checklist */
-
 ul.checklist {
-    list-style: none outside none;
-}
+  list-style: none outside none; }
 
 ul.checklist li {
-    background-repeat: no-repeat;
-    background-position: -10px -5px;
-    background-image: url("../images/icons/greencheck.png");
-    background-color: transparent;
-    background-attachment: scroll;
-    padding-left: 50px;
-    font-size: 14pt;
-    color: #009966;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-left: 0;
-}
+  background-repeat: no-repeat;
+  background-position: -10px -5px;
+  background-image: url("../images/icons/greencheck.png");
+  background-color: transparent;
+  background-attachment: scroll;
+  padding-left: 50px;
+  font-size: 14pt;
+  color: #009966;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 0; }
 
 /* @end */
-
 /* @group thumbnails */
-
 ul.thumbnails {
-    list-style: none outside none;
-
-}
+  list-style: none outside none; }
 
 ul.thumbnails a {
-    text-decoration: none;
-}
+  text-decoration: none; }
 
 ul.thumbnails li {
-    position: relative;
-}
+  position: relative; }
 
 ul.thumbnails .verb {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: black;
-    color: white;
-    padding-left: .5em;
-    padding-right: .5em;
-}
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  color: white;
+  padding-left: .5em;
+  padding-right: .5em; }
 
 ul.thumbnails .caption {
-    font-size: smaller;
-}
+  font-size: smaller; }
 
 /* @end */
-
 .section.intro h1 {
-	margin-top: .5em;
-    margin-bottom: 0px;
-}
+  margin-top: .5em;
+  margin-bottom: 0px; }
 
 .section.intro {
-	margin-bottom: 2em;
-}
+  margin-bottom: 2em; }
 
 .section.news .section h1 {
-    background-color: #009966;
-    color: white;
-    font-weight: normal;
-    text-align: center;
-    margin-bottom: .3em;
-}
+  background-color: #009966;
+  color: white;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: .3em; }
 
 .section.news .date {
-    font-weight: bold;
-}
-
-
+  font-weight: bold; }
 
 /* @end */
-
 /* @group beta */
-
 div#underconstruction {
-    margin-top: 6em;
-    margin-bottom: 5em;
-    background: lightyellow;
-    padding: 3em;
-    border-width: 1px 1px 4px 1px;
-    border-color: #009966;
-    border-style: solid;
-}
+  margin-top: 6em;
+  margin-bottom: 5em;
+  background: #fff5e6;
+  padding: 3em;
+  border-width: 1px 1px 4px 1px;
+  border-color: #e68a00;
+  border-style: solid; }
 
 #underconstruction p:last-child {
-    margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 div.beta-annotation p {
-    background: lightyellow;
-    margin: 1em;
-    padding: 1em;
-    border-width: 1px 1px 3px 1px;
-    border-color: #009966;
-    border-style: solid;
-}
+  background: #fff5e6;
+  margin: 1em;
+  padding: 1em;
+  border-width: 1px 1px 3px 1px;
+  border-color: #e68a00;
+  border-style: solid; }
+
+/* @end */
+/* @group uniform */
+.uniForm .focused {
+  background: #fff5e6; }
 
 /* @end */
