--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -1,4 +1,4 @@
-{% load cms_tags menu_tags feature_tag %}
+{% load cms_tags feature_tag %}
 <!doctype html>
 <html>
 <head>
@@ -71,8 +71,6 @@
 <div id="auth-info" class="grid_12 alpha omega">
     {% if user.is_authenticated %}
         <span>Welcome, {{ user.username }}.</span>
-        <span><a href="{% url dashboard_index %}">Dashboard</a></span>
-        <span><a href="{% url profile_detail user.username %}">Profile</a></span>
         <span><a href="{% url account_logout %}">Sign Out</a></span>
     {% else %}
         <span><a href="{% url account_signup %}">Sign Up</a></span>
@@ -81,9 +79,9 @@
 </div>
 
 {% block header %}
-<div class="header large grid_12 alpha omega">
+<div class="header grid_12 alpha omega">
     <h1><a href="/">SensibleWashington.org</a></h1>
-    <h2>Legalize Cannabis<br/>in 2011</h2>
+    <h2>{% block header_slogan %}Legalize Cannabis<br/>in 2011{% endblock %}</h2>
     <div id="site-search">
         <form action="/search/" method="get">
             <input name="q" type="search" id="search_q">
@@ -100,13 +98,11 @@
 </div>
 {% endblock %}
 
-{% if not group and not team_actions %}
-    <div id="site-sections" class="grid_12 alpha omega">
-        {% block site_sections %}
-            {% show_menu 0 100 0 100 "cms/site_sections_menu.html" %}
-        {% endblock %}
-    </div>
-{% endif %}
+<div id="site-sections" class="grid_12 alpha omega">
+    {% block site_sections %}
+        {% include "menu/site_sections_visitor.html" %}
+    {% endblock %}
+</div>
 
 {% feature breadcrumbs %}
     <div id="breadcrumbs" class="grid_12 alpha omega">
@@ -126,23 +122,7 @@
     {% endif %}
 {% endblock %}
 
-{% block content_wrapper %}
-    <div id="content" class="alpha omega grid_8">
-        {% include "site_messages.html" %}
-        {% block content_body %}
-            Content sections here.
-        {% endblock %}
-    </div>
-{% endblock %}
-
-{% block sidebar %}
-    <div id="sidebar" class="alpha grid_3 prefix_1">
-        {% block sidebar_sections %}
-            <div class="section">
-                Sidebar sections here.
-            </div>
-        {% endblock %}
-    </div>
+{% block page_content %}
 {% endblock %}
 
 <div class="clear">&nbsp;</div>
