--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends "base_hq_8_4.html" %}
 
 {% load pagination_tags %}
 
-{% block page_title %}Your Sensible Washington{% endblock %}
+{% block page_title %}Dashboard{% endblock %}
 
 {% block team_header %}
     <div id="team-header" class="grid_12 alpha omega">
-        <h1>Your Volunteer Dashboard</h1>
+        <h1>Dashboard</h1>
     </div>
 {% endblock %}
 
