--- a/sw/templates/idios/base.html
+++ b/sw/templates/idios/base.html
@@ -1,18 +1,18 @@
-{% extends "site_base.html" %}
+{% extends "base_hq_12.html" %}
 
 {% load i18n %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
-{% block body_class %}profile{% endblock %}
+{% block body_class %}{{ block.super }} profile{% endblock %}
 
-{% block subnav %}
-    {% if user.is_authenticated %}
-        <ul>
-            <li><a href="{% url profile_detail user.username %}">{% trans "Your Profile" %}</a></li>
-            <li><a href="{% url profile_list %}">{% trans "All Profiles" %}</a></li>
-        </ul>
-    {% else %}
-        &nbsp;
-    {% endif %}
+{% block page_content %}
+    <div id="content" class="alpha omega grid_12">
+        {% include "site_messages.html" %}
+        {% block body %}
+        {% endblock %}
+    </div>
+{% endblock %}
+
+{% block sidebar %}
 {% endblock %}
