--- a/sw/templates/site_base.html
+++ b/sw/templates/site_base.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "base_12.html" %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
-{% block content_wrapper %}
+{% block page_content %}
     <div id="content" class="alpha omega grid_12">
         {% include "site_messages.html" %}
         {% block body %}
