--- a/sw/templates/zinnia/base.html
+++ b/sw/templates/zinnia/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_8_4.html" %}
 {% load zinnia_tags tagging_tags i18n %}
 
 {% block page_title %}{% block title %}Title{% endblock %} - Blog{% endblock %}
